--- a/readme
+++ b/readme
@@ -2,32 +2,32 @@ $ django-admin startproject mysite
 This will create a mysite directory in your current directory
 
 $ python manage.py runserver
-You¡¯ve started the Django development server, a lightweight Web server
+Youï¿½ï¿½ve started the Django development server, a lightweight Web server
 written purely in Python
 
 $ python manage.py startapp polls
-That¡¯ll create a directory polls
+Thatï¿½ï¿½ll create a directory polls
 
 $ python manage.py migrate
 The migrate command looks at the INSTALLED_APPS setting and creates any
 necessary database tables according to the database settings in your
 mysite/settings.py file and the database migrations shipped with the app
-(we¡¯ll cover those later). You¡¯ll see a message for each migration it
+(weï¿½ï¿½ll cover those later). Youï¿½ï¿½ll see a message for each migration it
 applies
 
 $ python manage.py makemigrations polls
-By running makemigrations, you¡¯re telling Django that you¡¯ve made some changes
-to your models (in this case, you¡¯ve made new ones) and that you¡¯d like the
+By running makemigrations, youï¿½ï¿½re telling Django that youï¿½ï¿½ve made some changes
+to your models (in this case, youï¿½ï¿½ve made new ones) and that youï¿½ï¿½d like the
 changes to be stored as a migration.
 
 $ python manage.py sqlmigrate polls 0001
-There¡¯s a command that will run the migrations for you and manage your
-database schema automatically - that¡¯s called migrate, and we¡¯ll come
-to it in a moment - but first, let¡¯s see what SQL that migration would
+Thereï¿½ï¿½s a command that will run the migrations for you and manage your
+database schema automatically - thatï¿½ï¿½s called migrate, and weï¿½ï¿½ll come
+to it in a moment - but first, letï¿½ï¿½s see what SQL that migration would
 run. The sqlmigrate command takes migration names and returns their SQL
 
 $ python manage.py shell
 To invoke the Python shell
 
 $ python manage.py createsuperuser
-Create a user who can login to the admin site
+Create a user who can login to the admin site00000
